Mon Mar 26 14:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/PluggableUDP/tests/Basic/*:
        * tests/DIOP/*:
          Moved this test from examples to tests, this is a DIOP regression
          test that can be part of the orb test suite.

        * examples/PluggableUDP/tests/Makefile.am:
          Removed Basic directory

        * tests/Makefile.am:
          Added DIOP directory

Mon Mar 26 14:47:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/PluggableUDP/tests/Basic/client.cpp:
        * examples/PluggableUDP/tests/Basic/server.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_Client_i.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_i.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_i.h:
          Small cleanup and simplifications

Mon Mar 26 10:01:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tests/Big_Request_Muxing/client.cpp:
        * tests/Big_Request_Muxing/server.cpp:

          Give very generous timeouts for very slow systems (lynxos).

Sat Mar 24 23:40:17 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Security/EndpointPolicy/EndpointPolicy.mpc:
        * orbsvcs/tests/Security/InsecureReferences/InsecureReferences.mpc:

          The test projects did not have the correct base projects,
          causing core dumps on exit on many platforms.

Fri Mar 23 16:27:39 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/TransportCurrent/IIOP/IIOP.mpc
        * tests/TransportCurrent/Framework/Framework.mpc

          OS X Linker warnings.

Fri Mar 23 13:02:40 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Endpoint.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Endpoint.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Profile.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Profile.cpp:

        * orbsvcs/tests/Security/EndpointPolicy:

        * orbsvcs/tests/Security/EndpointPolicy/EndpointPolicy.mpc: